# multi-object-tracker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  run.sh  valgrind.sh
include/: fuser.hpp
scripts/: build.sh
sensor-simulator/: CMakeLists.txt
src/: main.cpp
src/sensor-simulator/: sensor.cpp
src/track-fuser/: fuser.cpp
tests/: test_fuser.cpp  test_main.cpp
track-fuser/: CMakeLists.txt  fuser.cpp
